Changed dasikas to Sowjanya Dasika

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Dasikas.github.com by dasikas</title>
+    <title>Dasikas.github.com by Sowjanya Dasika</title>
   </head>
 
   <body>
