--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,8 @@
 		</span>
 		<span id="usefulLinksId" class="contentText" style="display:none;">
 			<ul>
+				<li>Smashing Magazine: <a href="http://www.smashingmagazine.com/">http://www.smashingmagazine.com/</a></li>
+				<li>UX Magazine: <a href="http://uxmag.com/">http://uxmag.com/</a></li>
 				<li>Nice tutorials: <a href="http://thenewboston.org/tutorials.php">http://thenewboston.org/tutorials.php</a></li>
 				<li>Modernizr: <a href="http://webdesignernotebook.com/css/how-to-use-modernizr/">http://webdesignernotebook.com/css/how-to-use-modernizr/</a></li>
 				<li>HTML5 Boilerplate: <a href="http://html5boilerplate.com/">http://html5boilerplate.com/</a></li>
